tests/commonjs/commonjs.exp
Error ------------------------------------------------------------------------------------------------------- Rel.js:4:3

Cannot call `f` with `0` bound to `x` because number [1] is incompatible with string [2]. [incompatible-call]

   Rel.js:4:3
   4| f(0);
        ^ [1]

References:
   Abs.js:2:14
   2| function f(x:string) { }
                   ^^^^^^ [2]



Found 1 error
